src/index.css
:root {
  font: 16px / 1 sans-serif;
  --main-background: #5c7e58;
  --lighter-color: #f0f7ee;
  --darker-color: #363946;
  --brown: rgb(99, 79, 79);
  --white: rgba(255, 255, 255, 0.726);
}

html {
  height: 100%;
}

body {
  min-height: 100%;
}

nav {
  position: relative;
  background-color: black;
  color: var(--lighter-color);
}

/* ul {
  list-style: none;
} */

.overlay {
  display: flex;
  height: 34em;
  width: 79em;
}

.header {
  font-family: "Milonga", cursive;
  text-align: center;
  padding: 1em 1em 0.2em 1em;
}

.header,
.photos-container {
  background-color: var(--main-background);
}

.row {
  display: flex;
  flex-direction: row;
}

#reddit-project {
  padding-left: 2em;
}

#spacex-project {
  padding-right: 2em;
}

#octodex-project {
  padding-right: 2em;
}

#minesweeper-project {
  padding-left: 2em;
}

#tv-guide-project {
  padding-left: 2em;
}

#tic-tac-toe-project {
  padding-right: 2em;
}

#tetris-project {
  display: flex;
  flex-direction: column;
  padding-left: 13.9em;
}

#reddit-title {
  padding: 1em;
}

#spacex-title {
  padding: 3em;
}

#octodex-title {
  padding: 3em;
}

#minesweeper-title {
  padding-left: 2em;
}

#tv-guide-title {
  padding-left: 3em;
}

#tic-tac-toe-title {
  padding-left: 2em;
}

#tetris-title {
  padding-left: 2em;
}

#reddit-collapsible,
#tv-guide-collapsible {
  width: 83%;
}

#tetris-collapsible {
  width: 42%;
}

.project {
  font-size: 2em;
}

.img-style {
  display: flex;
  height: 415px;
  width: 315px;
}

.before-collapse {
  border: 0.1em black solid;
  background-color: white;
  color: black;
}

.after-collapse {
  display: flex;
  flex-direction: column;
  background-color: black;
  color: yellow;
  font-size: 0.8em;
}

.photos-container {
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;
  flex-wrap: wrap;
  list-style: none;
  padding: 2em;
}

/* work section */
.work-container {
  background-color: var(--main-background);
  padding-left: 2em;
}

.work-history-container {
  padding-top: 2em;
}

/*left side of work history */
.work-history-header {
  padding-left: 4em;
  height: 3vw;
  /* width: 25%; */
}

/*right side of work history */
.work-logo-container {
  display: flex;
  position: relative;
  bottom: 4em;
  padding-right: 11em;
  justify-content: flex-end;
}

.work-logo {
  width: 15em;
}

.work-accomplishments {
  padding-top: 2em;
  list-style-type: circle;
  margin: 0em;
}

.work-list {
  list-style-type: circle !important;
  font-size: 1.25em;
}

.skill-container {
  display: flex;
  background-color: var(--main-background);
  padding: 2em;
  padding-left: 2em;
}

.logo {
  padding: 1em;
  width: 6em;
  height: 6em;
}

a {
  color: darkblue;
}

.language-container,
.framework-and-library-container,
.concept-container,
.software-tool-container {
  position: relative;
  padding-left: 2em;
}

.deployment-environment-container {
  padding-left: 4em;
}

.about-me {
  display: flex;
  list-style: none;
  background-color: var(--brown);
  padding: 2em;
  color: rgb(233, 221, 221);
}

.about-container {
  display: flex;
  flex-direction: column;
  padding-left: 2em;
}

.download-resume {
  padding-top: 1em;
}

.contact-header {
  display: flex;
  justify-content: center;
  background-color: var(--main-color);
  color: var(--darker-color);
}

.contact-form {
  padding: 1.5em;
  background-color: var(--main-color);
}

.message-btn {
  margin-top: 2em;
}

.page-footer {
  padding: 0.1em;
  height: 8em;
  background-color: var(--darker-color);
  color: var(--lighter-color);
}

.copyright {
  display: flex;
  justify-content: center;
  padding-top: 2em;
}

.footer-link-container {
  display: flex;
  justify-content: flex-start;
  margin: 0;
}

.linkedin,
.github,
.codewars,
.leetcode {
  position: relative;
  padding: 0.2em;
  padding-right: 0.4em;
  height: 42px;
  width: 42px;
  border-radius: 0.9em;
}

.fab-container {
  position: fixed;
  bottom: 10px;
  right: 30px;
  z-index: 999;
  cursor: pointer;
}

.fab-icon-holder {
  width: 50px;
  height: 50px;
  border-radius: 100%;
}

.fab-icon-holder:hover {
  opacity: 0.8;
}

.fab-icon-holder i {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  font-size: 40px;
}

.fab-icon {
  background-color: rgb(37, 215, 137);
  padding-left: 0.3em;
  padding-top: 0.2em;
}

.fab {
  width: 60px;
  height: 60px;
}

.fab-options {
  position: absolute;
  list-style-type: none;
  bottom: 70px;
  right: 0;
  opacity: 0;
  margin: 0;
}

.fab-options li {
  display: flex;
  justify-content: flex-end;
  padding: 5px;
}

.fab-label {
  padding: 2px 5px;
  align-self: center;
  user-select: none;
  white-space: nowrap;
  border-radius: 3px;
  font-size: 16px;
  margin-right: 10px;
}

.fab-label:hover {
  font-weight: bold;
}

.fab:hover + .fab-options,
.fab-options:hover {
  opacity: 1;
}

/* iPad Pro */
@media (max-width: 1024px) and (max-height: 1366px) {
  .overlay {
    height: 34em;
    width: 64em;
  }
}

/* iPad */
@media (max-width: 768px) and (max-height: 1024px) {
  .nav {
    display: flex;
    justify-content: flex-end;
  }

  .main-menu-right {
    width: 20em;
  }

  .overlay {
    height: 30em;
    width: 48em;
  }

  .language-container,
  .framework-and-library-container,
  .concept-container,
  .software-tool-container,
  .deployment-environment-container {
    padding: 0.2em;
  }

  .about-me {
    padding: 1em;
  }

  .about-container {
    line-height: 1em;
  }
}

/* iPhone X */
@media (max-width: 375px) {
  nav {
    width: 48em;
  }

  .main-menu-right {
    position: relative;
  }

  .project-header,
  .photo-container,
  .skill-container,
  .about-me,
  .contact-form,
  .page-footer {
    width: 205%;
  }
}

/* Galaxy S5 */
@media (max-width: 360px) {
  /* body {
    width:50em;
  } */

  nav {
    width: 22.5em;
  }

  .overlay {
    height: 15em;
    width: 22.5em;
  }

  .project-header,
  .skill-container,
  .about-me,
  .contact-form,
  .page-footer {
    width: 100%;
  }

  .row {
    display: flex;
    flex-wrap: wrap;
    padding: 0em;
  }

  #reddit-project {
    padding: 0.2em 2em 2em 2em;
  }

  #spacex-project {
    padding: 0.2em 2em 2em 2em;
  }

  #octodex-project {
    padding: 0em 2em 2em 2em;
  }

  #minesweeper-project {
    padding: 0em 2em 2em 2em;
  }

  #tic-tac-toe-project {
    padding: 0em 2em 2em 2em;
  }

  #tv-guide-project {
    padding: 0em 2em 2em 2em;
  }

  #tetris-project {
    padding-right: 14em;
  }

  #spacex-title,
  #octodex-title {
    padding: 0;
  }

  #reddit-collapsible,
  #tv-guide-collapsible,
  #tetris-collapsible {
    width: 100%;
  }

  .skill-container {
    display: flex;
    flex-direction: column;
  }

  .language-container,
  .framework-and-library-container,
  .concept-container,
  .software-tool-container,
  .deployment-environment-container {
    padding: 0.2em;
  }

  .profile-pic-container {
    display: none;
  }

  .about-container {
    display: flex;
    flex-wrap: wrap;
    line-height: 1em;
  }
}

